[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bustracker"
version = "1.0.0"
description = "A Python module for use with the Chicago Transit Authority BusTracker API"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "Vic Garcia", email = "vic.garcia@outlook.com"}
]
dependencies = [
    "requests>=2.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-vcr>=1.0.0",
    "python-dotenv>=0.19.0",
    "build>=1.0.0",
]

[project.urls]
Repository = "https://github.com/vicgarcia/bustracker"
